2008-05-16  Martin Baulig  <martin@ximian.com>

	* debug-mono-symfile.c
	(mono_debug_symfile_lookup_location): Reflect latest symbol writer
	changes; we now use a special extended opcode `DW_LNE_MONO_negate_is_hidden'
	for `#line hidden'.

2008-05-05  Martin Baulig  <martin@ximian.com>

	* debug-mono-symfile.h
	(MonoSymbolFileMethodEntry): Removed.
	(MonoSymbolFileLexicalBlockEntry): Removed.
	(MonoSymbolFileLineNumberEntry): Removed.
	(MonoDebugLexicalBlockEntry): Removed.
	(MonoDebugMethodInfo): Replaced `entry' by `guint32 entry_offset'.

	* debug-mono-symfile.c
	(mono_debug_symfile_lookup_location): Reflect latest symbol file
	changes; we now get `line_base', `line_range' and `opcode_base'
	from the offset table.

2008-04-29  Martin Baulig  <martin@ximian.com>

	* debug-mono-symfile.h
	(MonoDebugMethodInfo): Removed `num_il_offsets' and `il_offsets'.

	* debug-mono-symfile.c
	(mono_debug_symfile_lookup_location): Add support for the new line
	number table format.

2008-04-29  Martin Baulig  <martin@ximian.com>

	* debug-mono-symfile.h (MONO_SYMBOL_FILE_VERSION): Bump to 42.

2008-04-29  Martin Baulig  <martin@ximian.com>

	**** Kahalo changes start here ****

2008-04-29  Kornél Pál  <kornelpal@gmail.com>

	* appdomain.c: Use HAVE_SYS_UTIME_H that fixes MSVC build.

2008-04-28  Zoltan Varga  <vargaz@gmail.com>

	* image.c (mono_image_strong_name_position): Fix return value when the rva is
	not valid.

2008-04-28  Kornél Pál  <kornelpal@gmail.com>

	* loader.c (mono_get_method_from_token, mono_method_signature): Add
	support for METHOD_IMPL_ATTRIBUTE_NATIVE.
	* domain.c (mono_init_internal): Load and fixup mscoree.dll on startup and
	fixup main EXE images when using mono.exe for mixed-mode assembly support.
	* domain-internals.h: Add MonoLoadFunc, mono_install_runtime_load and
	mono_runtime_load.
	* appdomain.c: Add mono_install_runtime_load, mono_runtime_load to support
	runtime initialization from metadata.
	* assembly.c: Remove obsolete ceGetModuleFileNameA.